# tdgl-flow

./: .dev-mode  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.data-viewer  Dockerfile.generator  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
clusters/argocd/: helm-values.yaml  kustomization.yaml
clusters/argocd/apps/: infra.yaml  services.yaml
clusters/k3s/: tdgl-resources.yaml
cpp-tdgl/: CMakeLists.txt  README.md  SPEC.md
cpp-tdgl-viewer-rust/: Cargo.toml  pyproject.toml
cpp-tdgl-viewer-rust/python/cpp_tdgl_viewer_rust/: __init__.py  widget.py
cpp-tdgl-viewer-rust/src/: discrete_reader.rs  hdf5_index.rs  lib.rs  minio_client.rs
cpp-tdgl/benchmarks/: CMakeLists.txt  profile_step.cpp
cpp-tdgl/scripts/: benchmark.py  benchmark_example.py  convert_device.py  gen_screen_videos.py  generate_benchmark.py  generate_logo.py  run_benchmark_video.py
cpp-tdgl/src/: main.cpp
cpp-tdgl/src/device/: device.cpp  layer.cpp
cpp-tdgl/src/operators/: operators.cpp  poisson_solver.cpp
cpp-tdgl/src/solution/: solution.cpp  solution.h
cpp-tdgl/src/solver/: adaptive_step.cpp  observables.cpp  screening.cpp  solver.cpp  solver.h
cpp-tdgl/src/sync/: minio_synchronizer.cpp  minio_synchronizer.h
cpp-tdgl/src/timing/: timing.h
cpp-tdgl/tests/: test_mesh.cpp
docs/superpowers/plans/: 2026-05-15-large-frame-performance.md  2026-05-15-tdgl-data-management.md  2026-05-15-tdgl-heatmap-viewer.md  2026-05-16-ci-cleanup-and-image-split.md  2026-05-16-data-service-deployment.md  2026-05-16-flux-gitops.md  2026-05-16-plotly-viewer-status.md  2026-05-16-project-reorganization.md  2026-05-16-realtime-iv-update.md  2026-05-16-remove-demo-generation.md  2026-05-16-total-frames-aware-viewer.md  2026-05-17-argocd-migration.md  2026-05-17-nginx-ingress-router.md  2026-05-17-plotly-session-fix.md  2026-05-17-tdgl-simulation-workflow.md  2026-05-18-cpp-tdgl-zarr-workflow.md  2026-05-18-viewer-manager-backend.md  2026-05-19-continuous-sweep-save-window.md  2026-05-22-frame-player.md  2026-05-22-heatmap-animation.md  2026-05-24-browse-runs-notebook.md  2026-05-24-iv-step-averaged.md  2026-05-24-minio-clear-debug-logger.md  2026-05-24-playback-speed-and-ui.md  2026-05-24-player-2x2.md  2026-05-24-project-trim.md  2026-05-24-vt-current-step.md  2026-05-25-gaussian-epsilon.md  2026-05-25-rust-viewer.md  2026-05-26-cpp-tdgl-runner.md  2026-05-26-time-based-viewer.md  2026-05-26-widget-layout-polish.md  2026-05-27-dflow-triton-implementation.md  2026-05-28-cpp-tdgl-implementation.md
git-tdgl-light/cpp-tdgl/: CMakeLists.txt
git-tdgl-light/cpp-tdgl/tests/: CMakeLists.txt  test_operators.cpp  test_timing.cpp
infra/: kustomization.yaml  namespace.yaml  triton-secret.yaml
infra/argo-workflows/: helm-values.yaml
infra/ingress/: argo-workflows.yaml  kustomization.yaml
infra/istio/: gateway.yaml
infra/nginx/: configmap.yaml  deployment.yaml  index.html  kustomization.yaml  nginx.conf  service-s3.yaml  service.yaml
k8s/data-service/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/data-viewer/: deployment.yaml
k8s/generator/: deployment.yaml  job.yaml  service.yaml
notebooks/: 009-native-widget-player.ipynb  010-minio-run-viewer.ipynb  README.md  argo_workflow_demo.ipynb  argo_workflow_demo.py  benchmark_cpp_vs_py.py  browse_cpp_tdgl_runs.py  browse_runs.py  browse_runs_2x2.py  browse_rust_viewer.py  device_builder.ipynb  device_builder.py  e2e_sim_test.py  e2e_sim_test_2x2.py  frame_player.ipynb  local_tdgl_sim.ipynb  manage_runs.py  run_cpp_tdgl.py  run_py_tdgl.py  run_tdgl_sim.py  run_triton_sim.py  rust_viewer_demo.py  tdgl_demo.ipynb  test_gaussian_epsilon.py  test_heatmap_viewer.ipynb  timing_sim.ipynb
services/: kustomization.yaml
services/cpp-tdgl-runner/: Dockerfile  build_device.py  build_timing.py  convert_mesh.py  runner.py
services/data-viewer/: Dockerfile
services/generator/: Dockerfile
services/py-tdgl-runner/: Dockerfile  build_device.py  build_timing.py  runner.py
services/tdgl-workflow/: Dockerfile
services/triton-runner/: Dockerfile  runner.py
services/viewer-manager/: Dockerfile
src/cpp-tdgl/: CMakeLists.txt
src/tdgl_data/: app.py  config.py  dev_app.py  events.py  models.py  repository.py  schemas.py  synthetic.py  zarr_store.py
src/tdgl_generator/: app.py  config.py
src/tdgl_sdk/: __init__.py  _dflow_pipeline.py  _triton_pipeline.py  client.py  pipeline.py  sidecar_sync.py  viewer.py
src/tdgl_workflow/: app.py  config.py  dev_app.py  epsilon.py  mesh.py  plots.py  timing.py
src/viewer_manager/: app.py  cleanup.py  config.py  db.py  dev_app.py  k8s_client.py  models.py  proxy.py  schemas.py
tdgl-viewer-rust/: .gitignore  Cargo.toml  pyproject.toml
tdgl-viewer-rust/python/tdgl_viewer_rust/: __init__.py  widget.py
tdgl-viewer-rust/src/: buffer.rs  colormaps.rs  discrete_index.rs  discrete_reader.rs  frame_reader.rs  hdf5_index.rs  interp.rs  iv.rs  lib.rs  minio.rs  renderer.rs  run_info.rs
tdgl-viewer-rust/tests/: test_hdf5_index.rs  test_integration.py  test_iv.rs  test_minio.rs  test_renderer.rs
tdgl_data/: app.py  config.py  db.py  models.py  repository.py  schemas.py  synthetic.py  zarr_store.py
tdgl_data/static/: viewer.html
tdgl_generator/: __main__.py  cli.py
tdgl_generator/static/: generator.html
templates/: README.md
tests/: conftest.py  test_api.py  test_config.py  test_cpp_runner_save_window.py  test_device_timing_api.py  test_dflow_pipeline.py  test_epsilon.py  test_generator.py  test_iv_timing_steps.py  test_mesh.py  test_pipeline.py  test_plots.py  test_py_runner_timeline.py  test_repository.py  test_run_tdgl_sim_script.py  test_sdk_client.py  test_sidecar_sync.py  test_synthetic.py  test_timing.py  test_viewer_diagnostics.py  test_viewer_manager.py  test_workflow_routes.py  test_zarr_per_site.py  test_zarr_store.py
tools/: check_vt_trace.py
triton/: slurm_runner.py  submit.sh
workflows/: cpp-tdgl-sim.yaml  py-tdgl-sim.yaml  rectangle-device-builder.yaml  triton-tdgl-sim.yaml
(+127 files in other folders)
