[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubeflow-tdgl-data"
version = "0.1.0"
description = "TDGL data-management service for Kubeflow-oriented simulation workflows"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "hera-workflows>=5.17",
  "httpx>=0.27",
  "kubernetes>=29.7",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "tdgl>=0.8",
  "sqlalchemy>=2.0",
  "sse-starlette>=2.1",
  "uvicorn[standard]>=0.30",
  "zarr>=2.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tdgl_data*", "tdgl_generator*", "tdgl_workflow*", "tdgl_sdk*", "viewer_manager*"]

[tool.setuptools.package-data]
tdgl_data = ["static/*.html"]
tdgl_generator = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
