[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubeflow-tdgl"
version = "0.1.0"
description = "Minimal Argo + MinIO py-tdgl simulation workflow with local notebook viewer"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35",
  "dpdispatcher>=1.0",
  "hera-workflows>=5.17",
  "httpx>=0.27",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydflow>=1.8",
  "scipy>=1.12",
  "tdgl>=0.8",
  "h5py>=3.10",
  "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tdgl_workflow*", "tdgl_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
