[package]
name = "tdgl-viewer-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tdgl_viewer_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rayon = "1.10"